// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect should display a not found message when there are no options 1`] = `
<ul
  className="multiselect is-active"
>
  <li
    className="multiselectActions"
  >
    <ShowIf
      if={false}
    >
      <div
        className="form-group"
      >
        <Connect(Icon)
          icon="search"
          onClick={[Function]}
        />
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Search item"
          type="text"
          value=""
        />
      </div>
    </ShowIf>
  </li>
  <span>
    No options found
  </span>
  <li
    className="multiselectActions"
  >
    <ShowIf
      if={false}
    >
      <button
        className="btn btn-xs btn-default"
        onClick={[Function]}
      >
        <Connect(Icon)
          icon="caret-down"
        />
         
        <span>
          -5
           
          x more
        </span>
      </button>
    </ShowIf>
  </li>
</ul>
`;

exports[`MultiSelect should not render aggregations on the groups when not defined 1`] = `
<span
  className="multiselectItem-results"
>
  <span
    className="multiselectItem-action"
    onClick={[Function]}
  >
    <Connect(Icon)
      icon="caret-down"
    />
  </span>
</span>
`;

exports[`MultiSelect should not render an empty group 1`] = `
<ul
  className="multiselect is-active"
>
  <li
    className="multiselectActions"
  >
    <ShowIf
      if={false}
    >
      <div
        className="form-group"
      >
        <Connect(Icon)
          icon="search"
          onClick={[Function]}
        />
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Search item"
          type="text"
          value=""
        />
      </div>
    </ShowIf>
  </li>
  <li
    className="multiselectItem"
    key="0"
    title="Option1"
  >
    <input
      checked={false}
      className="multiselectItem-input"
      id="option1"
      onChange={[Function]}
      type="checkbox"
      value="option1"
    />
    <label
      className="multiselectItem-label"
      htmlFor="option1"
    >
      <span
        className="multiselectItem-icon"
      >
        <Connect(Icon)
          className="checkbox-empty"
          icon={
            Array [
              "far",
              "square",
            ]
          }
        />
        <Connect(Icon)
          className="checkbox-checked"
          icon="check"
        />
      </span>
      <span
        className="multiselectItem-name"
      >
        <Icon
          className="item-icon"
        />
        Option1
      </span>
      <span
        className="multiselectItem-results"
      >
        <span>
          5
        </span>
      </span>
    </label>
  </li>
  <li
    className="multiselectItem"
    key="1"
    title="Option2"
  >
    <input
      checked={false}
      className="multiselectItem-input"
      id="option2"
      onChange={[Function]}
      type="checkbox"
      value="option2"
    />
    <label
      className="multiselectItem-label"
      htmlFor="option2"
    >
      <span
        className="multiselectItem-icon"
      >
        <Connect(Icon)
          className="checkbox-empty"
          icon={
            Array [
              "far",
              "square",
            ]
          }
        />
        <Connect(Icon)
          className="checkbox-checked"
          icon="check"
        />
      </span>
      <span
        className="multiselectItem-name"
      >
        <Icon
          className="item-icon"
        />
        Option2
      </span>
      <span
        className="multiselectItem-results"
      >
        <span>
          4
        </span>
      </span>
    </label>
  </li>
  <li
    className="multiselect-group"
    key="2"
  >
    <div
      className="multiselectItem"
    >
      <input
        checked={false}
        className="group-checkbox multiselectItem-input"
        id="undefined"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="multiselectItem-label"
        htmlFor="Group"
      >
        <span
          className="multiselectItem-icon"
        >
          <Connect(Icon)
            className="checkbox-empty"
            icon={
              Array [
                "far",
                "square",
              ]
            }
          />
          <Connect(Icon)
            className="checkbox-checked"
            icon="check"
          />
        </span>
        <span
          className="multiselectItem-name"
        >
          <Icon
            className="item-icon"
          />
          Sub Group
        </span>
        <span
          className="multiselectItem-results"
        >
          <span>
            3
          </span>
          <span
            className="multiselectItem-action"
            onClick={[Function]}
          >
            <Connect(Icon)
              icon="caret-down"
            />
          </span>
        </span>
      </label>
    </div>
    <ShowIf
      if={false}
    >
      <ul
        className="multiselectChild is-active"
      >
        <li
          className="multiselectItem"
          key="20"
          title="Group option1"
        >
          <input
            checked={false}
            className="multiselectItem-input"
            id="group-option1"
            onChange={[Function]}
            type="checkbox"
            value="group-option1"
          />
          <label
            className="multiselectItem-label"
            htmlFor="group-option1"
          >
            <span
              className="multiselectItem-icon"
            >
              <Connect(Icon)
                className="checkbox-empty"
                icon={
                  Array [
                    "far",
                    "square",
                  ]
                }
              />
              <Connect(Icon)
                className="checkbox-checked"
                icon="check"
              />
            </span>
            <span
              className="multiselectItem-name"
            >
              <Icon
                className="item-icon"
              />
              Group option1
            </span>
            <span
              className="multiselectItem-results"
            >
              <span>
                2
              </span>
            </span>
          </label>
        </li>
        <li
          className="multiselectItem"
          key="21"
          title="Group option2"
        >
          <input
            checked={false}
            className="multiselectItem-input"
            id="group-option2"
            onChange={[Function]}
            type="checkbox"
            value="group-option2"
          />
          <label
            className="multiselectItem-label"
            htmlFor="group-option2"
          >
            <span
              className="multiselectItem-icon"
            >
              <Connect(Icon)
                className="checkbox-empty"
                icon={
                  Array [
                    "far",
                    "square",
                  ]
                }
              />
              <Connect(Icon)
                className="checkbox-checked"
                icon="check"
              />
            </span>
            <span
              className="multiselectItem-name"
            >
              <Icon
                className="item-icon"
              />
              Group option2
            </span>
            <span
              className="multiselectItem-results"
            >
              <span>
                1
              </span>
            </span>
          </label>
        </li>
      </ul>
    </ShowIf>
  </li>
  <li
    className="multiselectActions"
  >
    <ShowIf
      if={false}
    >
      <button
        className="btn btn-xs btn-default"
        onClick={[Function]}
      >
        <Connect(Icon)
          icon="caret-down"
        />
         
        <span>
          -2
           
          x more
        </span>
      </button>
    </ShowIf>
  </li>
</ul>
`;
